force-app/main/default/objects/CEPFPSEmailBranding__mdt/CEPFPSEmailBranding__mdt.object-meta.xml
<CustomObject>
    <description>Metadata that will control the branding layout of the emails sent by the fps portal.</description>
    <label>CEP FPS Email Branding</label>
    <pluralLabel>CEP FPS Email Brandings</pluralLabel>
</CustomObject>