force-app/main/default/objects/CEPFPSEmailBranding__mdt/fields/BrandingPrimaryColor__c.field-meta.xml
<CustomField>
    <fullName>BrandingPrimaryColor__c</fullName>
    <defaultValue>&apos;#003366&apos;</defaultValue>
    <description>The color used in the whole branding as primary color</description>
    <label>Branding Primary Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>