force-app/main/default/objects/CEPFPSEmailBranding__mdt/fields/ButtonsColor__c.field-meta.xml
<CustomField>
    <fullName>ButtonsColor__c</fullName>
    <description>main color of the buttons used in the template</description>
    <label>Buttons Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>