force-app/main/default/objects/CEPFPSEmailBranding__mdt/fields/ButtonsTextColor__c.field-meta.xml
<CustomField>
    <fullName>ButtonsTextColor__c</fullName>
    <description>main color of the text inside the buttons used in the template</description>
    <label>Buttons Text Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>