force-app/main/default/objects/CEPFPSEmailBranding__mdt/fields/CopyrightText__c.field-meta.xml
<CustomField>
    <fullName>CopyrightText__c</fullName>
    <description>text containing the copyright displayed in the bottom of the email template</description>
    <label>Copyright Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>