force-app/main/default/objects/CEPFPSEmailBranding__mdt/fields/CountryIsoCode__c.field-meta.xml
<CustomField>
    <fullName>CountryIsoCode__c</fullName>
    <description>country to apply this branding</description>
    <label>Country Iso Code</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>