force-app/main/default/objects/CEPFPSEmailBranding__mdt/fields/DownloadInvoiceButtonText__c.field-meta.xml
<CustomField>
    <fullName>DownloadInvoiceButtonText__c</fullName>
    <description>Text that will be placed on the download invoice button on the email templates.</description>
    <label>Download Invoice Button Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>