force-app/main/default/objects/CEPFPSEmailBranding__mdt/fields/EnergyFlashColor__c.field-meta.xml
<CustomField>
    <fullName>EnergyFlashColor__c</fullName>
    <description>The color used in the energy line below the primary color top bar of the branding</description>
    <label>Energy Flash Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>