force-app/main/default/objects/CEPFPSEmailBranding__mdt/fields/FontFamily__c.field-meta.xml
<CustomField>
    <fullName>FontFamily__c</fullName>
    <description>font family that will be used in all the email template</description>
    <label>Font Family</label>
    <length>255</length>
    <type>Text</type>
</CustomField>