force-app/main/default/objects/CEPFPSEmailBranding__mdt/fields/FontSize__c.field-meta.xml
<CustomField>
    <fullName>FontSize__c</fullName>
    <description>This field will be used to define the font size for the button depending on the Country</description>
    <label>Font Size</label>
    <length>10</length>
    <type>Text</type>
</CustomField>