force-app/main/default/objects/CEPFPSEmailBranding__mdt/fields/FooterLogoImage__c.field-meta.xml
<CustomField>
    <fullName>FooterLogoImage__c</fullName>
    <description>The unique name of the document containing the logo that will be used in the Footer of the email message</description>
    <label>Footer Logo Image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>