force-app/main/default/objects/CEPFPSEmailBranding__mdt/fields/FooterURL__c.field-meta.xml
<CustomField>
    <fullName>FooterURL__c</fullName>
    <description>URL that is displayed in the footer of the template</description>
    <label>Footer URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>