force-app/main/default/objects/CEPFPSEmailBranding__mdt/fields/ForgotEmailButtonText__c.field-meta.xml
<CustomField>
    <fullName>ForgotEmailButtonText__c</fullName>
    <description>text that will be displayed inside the button of the forgot password email template</description>
    <label>Forgot Email Button Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>