force-app/main/default/objects/CEPFPSEmailBranding__mdt/fields/ForgotEmailText1__c.field-meta.xml
<CustomField>
    <fullName>ForgotEmailText1__c</fullName>
    <description>text that will be presented in the Forgot password email, use parameters to later replace by the dynamic values</description>
    <label>Forgot Email Text 1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>