force-app/main/default/objects/CEPFPSEmailBranding__mdt/fields/ForgotEmailText2__c.field-meta.xml
<CustomField>
    <fullName>ForgotEmailText2__c</fullName>
    <description>text that will be presented in the Forgot password email after the button, use parameters to later replace by the dynamic values</description>
    <label>Forgot Email Text 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>