force-app/main/default/objects/CEPFPSEmailBranding__mdt/fields/HeaderLogoImage__c.field-meta.xml
<CustomField>
    <fullName>HeaderLogoImage__c</fullName>
    <description>The unique name of the document containing the logo that will be used in the header of the email message</description>
    <label>Header Logo Image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>