force-app/main/default/objects/CEPFPSEmailBranding__mdt/fields/HeaderText__c.field-meta.xml
<CustomField>
    <fullName>HeaderText__c</fullName>
    <description>The text that will be presented in the header of the email message</description>
    <label>Header Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>