force-app/main/default/objects/CEPFPSEmailBranding__mdt/fields/ImprintText__c.field-meta.xml
<CustomField>
    <fullName>ImprintText__c</fullName>
    <description>Text that is displayed as imprint in the bottom of the email template</description>
    <label>Imprint Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>