force-app/main/default/objects/CEPFPSEmailBranding__mdt/fields/ImprintURL__c.field-meta.xml
<CustomField>
    <fullName>ImprintURL__c</fullName>
    <description>URL of the Imprint text</description>
    <label>Imprint URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>