force-app/main/default/objects/CEPFPSEmailBranding__mdt/fields/InvoiceRemainderText__c.field-meta.xml
<CustomField>
    <fullName>InvoiceRemainderText__c</fullName>
    <description>text that will be presented in the Invoice Remainder email, use parameters to later replace by the dynamic values</description>
    <label>Invoice Remainder Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>