force-app/main/default/objects/CEPFPSEmailBranding__mdt/fields/LogoHeight__c.field-meta.xml
<CustomField>
    <fullName>LogoHeight__c</fullName>
    <description>Field to define the Logo Height</description>
    <label>Logo Height</label>
    <length>50</length>
    <type>Text</type>
</CustomField>