force-app/main/default/objects/CEPFPSEmailBranding__mdt/fields/LogoWidth__c.field-meta.xml
<CustomField>
    <fullName>LogoWidth__c</fullName>
    <description>Field to define the Logo Width</description>
    <label>Logo Width</label>
    <length>50</length>
    <type>Text</type>
</CustomField>