force-app/main/default/objects/CEPFPSEmailBranding__mdt/fields/NewInvoiceEmailText__c.field-meta.xml
<CustomField>
    <fullName>NewInvoiceEmailText__c</fullName>
    <description>text that will be presented in the New Invoice email, use parameters to later replace by the dynamic values</description>
    <label>New Invoice Email Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>