force-app/main/default/objects/CEPFPSEmailBranding__mdt/fields/TelephoneContact__c.field-meta.xml
<CustomField>
    <fullName>TelephoneContact__c</fullName>
    <description>Telephone number that is displayed in the bottom of the email template</description>
    <label>Telephone Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>