force-app/main/default/objects/CEPFPSEmailBranding__mdt/fields/WelcomeButtonText__c.field-meta.xml
<CustomField>
    <fullName>WelcomeButtonText__c</fullName>
    <description>text that will be displayed inside the button of the welcome email template</description>
    <label>Welcome Button Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>