force-app/main/default/objects/CEPFPSEmailBranding__mdt/fields/WelcomeText1__c.field-meta.xml
<CustomField>
    <fullName>WelcomeText1__c</fullName>
    <description>text that will be presented in the welcome email, use parameters to later replace by the dynamic values</description>
    <label>Welcome Text 1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>