force-app/main/default/objects/CEPFPSEmailBranding__mdt/fields/WelcomeText2__c.field-meta.xml
<CustomField>
    <fullName>WelcomeText2__c</fullName>
    <description>text that will be presented in the welcome email after the button, use parameters to later replace by the dynamic values</description>
    <label>Welcome Text 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>